Package_Tools/include-C/Ubuntu_26.04/gtk-4.0/gtk/deprecated/gtktreemodel.h

#define GTK_TYPE_TREE_MODEL            (gtk_tree_model_get_type ())
#define GTK_TREE_MODEL(obj)            (G_TYPE_CHECK_INSTANCE_CAST ((obj), GTK_TYPE_TREE_MODEL, GtkTreeModel))
#define GTK_IS_TREE_MODEL(obj)	       (G_TYPE_CHECK_INSTANCE_TYPE ((obj), GTK_TYPE_TREE_MODEL))
#define GTK_TREE_MODEL_GET_IFACE(obj)  (G_TYPE_INSTANCE_GET_INTERFACE ((obj), GTK_TYPE_TREE_MODEL, GtkTreeModelIface))
#define GTK_TYPE_TREE_ITER             (gtk_tree_iter_get_type ())
#define GTK_TYPE_TREE_PATH             (gtk_tree_path_get_type ())
#define GTK_TYPE_TREE_ROW_REFERENCE    (gtk_tree_row_reference_get_type ())
typedef struct _GtkTreeIter         GtkTreeIter;
typedef struct _GtkTreePath         GtkTreePath;
typedef struct _GtkTreeRowReference GtkTreeRowReference;
typedef struct _GtkTreeModel        GtkTreeModel; /* Dummy typedef */
typedef struct _GtkTreeModelIface   GtkTreeModelIface;
/**
 * GtkTreeModelForeachFunc:
 * @model: the `GtkTreeModel` being iterated
 * @path: the current `GtkTreePath`
 * @iter: the current `GtkTreeIter`
 * @data: (closure): The user data passed to gtk_tree_model_foreach()
 *
 * Type of the callback passed to gtk_tree_model_foreach() to
 * iterate over the rows in a tree model.
 *
 * Returns: %TRUE to stop iterating, %FALSE to continue
 *
 * Deprecated: 4.20: There is no replacement.
 */
typedef gboolean (* GtkTreeModelForeachFunc) (GtkTreeModel *model, GtkTreePath *path, GtkTreeIter *iter, gpointer data);
/**
 * GtkTreeModelFlags:
 * @GTK_TREE_MODEL_ITERS_PERSIST: iterators survive all signals
 *   emitted by the tree
 * @GTK_TREE_MODEL_LIST_ONLY: the model is a list only, and never
 *   has children
 *
 * These flags indicate various properties of a `GtkTreeModel`.
 *
 * They are returned by [method@Gtk.TreeModel.get_flags], and must be
 * static for the lifetime of the object. A more complete description
 * of %GTK_TREE_MODEL_ITERS_PERSIST can be found in the overview of
 * this section.
 *
 * Deprecated: 4.10: There is no replacement
 */
typedef enum
{
  GTK_TREE_MODEL_ITERS_PERSIST = 1 << 0,
  GTK_TREE_MODEL_LIST_ONLY = 1 << 1
} GtkTreeModelFlags;
/* GtkTreePath operations */
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
GtkTreePath *gtk_tree_path_new              (void);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
GtkTreePath *gtk_tree_path_new_from_string  (const char        *path);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
GtkTreePath *gtk_tree_path_new_from_indices (int                first_index,
					     ...);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
GtkTreePath *gtk_tree_path_new_from_indicesv (int              *indices,
					      gsize             length);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
char        *gtk_tree_path_to_string        (GtkTreePath       *path);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
GtkTreePath *gtk_tree_path_new_first        (void);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void         gtk_tree_path_append_index     (GtkTreePath       *path,
					     int                index_);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void         gtk_tree_path_prepend_index    (GtkTreePath       *path,
					     int                index_);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
int          gtk_tree_path_get_depth        (GtkTreePath       *path);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
int         *gtk_tree_path_get_indices      (GtkTreePath       *path);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
int         *gtk_tree_path_get_indices_with_depth (GtkTreePath *path,
						   int         *depth);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void         gtk_tree_path_free             (GtkTreePath       *path);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
GtkTreePath *gtk_tree_path_copy             (const GtkTreePath *path);
extern
GType        gtk_tree_path_get_type         (void) ;
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
int          gtk_tree_path_compare          (const GtkTreePath *a,
					     const GtkTreePath *b);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void         gtk_tree_path_next             (GtkTreePath       *path);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
gboolean     gtk_tree_path_prev             (GtkTreePath       *path);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
gboolean     gtk_tree_path_up               (GtkTreePath       *path);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void         gtk_tree_path_down             (GtkTreePath       *path);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
gboolean     gtk_tree_path_is_ancestor      (GtkTreePath       *path,
                                             GtkTreePath       *descendant);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
gboolean     gtk_tree_path_is_descendant    (GtkTreePath       *path,
                                             GtkTreePath       *ancestor);
/**
 * GtkTreeRowReference:
 *
 * A GtkTreeRowReference tracks model changes so that it always refers to the
 * same row (a `GtkTreePath` refers to a position, not a fixed row). Create a
 * new GtkTreeRowReference with gtk_tree_row_reference_new().
 *
 * Deprecated: 4.10: Use [iface@Gio.ListModel] instead
 */

extern
GType                gtk_tree_row_reference_get_type (void) ;
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
GtkTreeRowReference *gtk_tree_row_reference_new       (GtkTreeModel        *model,
						       GtkTreePath         *path);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
GtkTreeRowReference *gtk_tree_row_reference_new_proxy (GObject             *proxy,
						       GtkTreeModel        *model,
						       GtkTreePath         *path);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
GtkTreePath         *gtk_tree_row_reference_get_path  (GtkTreeRowReference *reference);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
GtkTreeModel        *gtk_tree_row_reference_get_model (GtkTreeRowReference *reference);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
gboolean             gtk_tree_row_reference_valid     (GtkTreeRowReference *reference);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
GtkTreeRowReference *gtk_tree_row_reference_copy      (GtkTreeRowReference *reference);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void                 gtk_tree_row_reference_free      (GtkTreeRowReference *reference);
/* These two functions are only needed if you created the row reference with a
 * proxy object */
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void                 gtk_tree_row_reference_inserted  (GObject     *proxy,
						       GtkTreePath *path);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void                 gtk_tree_row_reference_deleted   (GObject     *proxy,
						       GtkTreePath *path);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void                 gtk_tree_row_reference_reordered (GObject     *proxy,
						       GtkTreePath *path,
						       GtkTreeIter *iter,
						       int         *new_order);
/* GtkTreeIter operations */
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
GtkTreeIter *     gtk_tree_iter_copy             (GtkTreeIter  *iter);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void              gtk_tree_iter_free             (GtkTreeIter  *iter);
extern
GType             gtk_tree_iter_get_type         (void) ;
extern
GType             gtk_tree_model_get_type        (void) ;
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
GtkTreeModelFlags gtk_tree_model_get_flags       (GtkTreeModel *tree_model);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
int               gtk_tree_model_get_n_columns   (GtkTreeModel *tree_model);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
GType             gtk_tree_model_get_column_type (GtkTreeModel *tree_model,
						  int           index_);
/* Iterator movement */
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
gboolean          gtk_tree_model_get_iter        (GtkTreeModel *tree_model,
						  GtkTreeIter  *iter,
						  GtkTreePath  *path);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
gboolean          gtk_tree_model_get_iter_from_string (GtkTreeModel *tree_model,
						       GtkTreeIter  *iter,
						       const char   *path_string);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
char *           gtk_tree_model_get_string_from_iter (GtkTreeModel *tree_model,
                                                       GtkTreeIter  *iter);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
gboolean          gtk_tree_model_get_iter_first  (GtkTreeModel *tree_model,
						  GtkTreeIter  *iter);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
GtkTreePath *     gtk_tree_model_get_path        (GtkTreeModel *tree_model,
						  GtkTreeIter  *iter);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void              gtk_tree_model_get_value       (GtkTreeModel *tree_model,
						  GtkTreeIter  *iter,
						  int           column,
						  GValue       *value);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
gboolean          gtk_tree_model_iter_previous   (GtkTreeModel *tree_model,
						  GtkTreeIter  *iter);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
gboolean          gtk_tree_model_iter_next       (GtkTreeModel *tree_model,
						  GtkTreeIter  *iter);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
gboolean          gtk_tree_model_iter_children   (GtkTreeModel *tree_model,
						  GtkTreeIter  *iter,
						  GtkTreeIter  *parent);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
gboolean          gtk_tree_model_iter_has_child  (GtkTreeModel *tree_model,
						  GtkTreeIter  *iter);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
int               gtk_tree_model_iter_n_children (GtkTreeModel *tree_model,
						  GtkTreeIter  *iter);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
gboolean          gtk_tree_model_iter_nth_child  (GtkTreeModel *tree_model,
						  GtkTreeIter  *iter,
						  GtkTreeIter  *parent,
						  int           n);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
gboolean          gtk_tree_model_iter_parent     (GtkTreeModel *tree_model,
						  GtkTreeIter  *iter,
						  GtkTreeIter  *child);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void              gtk_tree_model_ref_node        (GtkTreeModel *tree_model,
						  GtkTreeIter  *iter);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void              gtk_tree_model_unref_node      (GtkTreeModel *tree_model,
						  GtkTreeIter  *iter);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void              gtk_tree_model_get             (GtkTreeModel *tree_model,
						  GtkTreeIter  *iter,
						  ...);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void              gtk_tree_model_get_valist      (GtkTreeModel *tree_model,
						  GtkTreeIter  *iter,
						  va_list       var_args);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void              gtk_tree_model_foreach         (GtkTreeModel            *model,
						  GtkTreeModelForeachFunc  func,
						  gpointer                 user_data);
/* Signals */
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void gtk_tree_model_row_changed           (GtkTreeModel *tree_model,
					   GtkTreePath  *path,
					   GtkTreeIter  *iter);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void gtk_tree_model_row_inserted          (GtkTreeModel *tree_model,
					   GtkTreePath  *path,
					   GtkTreeIter  *iter);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void gtk_tree_model_row_has_child_toggled (GtkTreeModel *tree_model,
					   GtkTreePath  *path,
					   GtkTreeIter  *iter);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void gtk_tree_model_row_deleted           (GtkTreeModel *tree_model,
					   GtkTreePath  *path);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void gtk_tree_model_rows_reordered        (GtkTreeModel *tree_model,
					   GtkTreePath  *path,
					   GtkTreeIter  *iter,
					   int          *new_order);
extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(GListModel)
void gtk_tree_model_rows_reordered_with_length (GtkTreeModel *tree_model,
						GtkTreePath  *path,
						GtkTreeIter  *iter,
						int          *new_order,
						int           length);